templates/network/vnet.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.1",
    "parameters": {
        "Name": {
            "type": "string",
            "metadata": {
                "description": "Name of the vnet."
            }
        },
        "Region": {
            "type": "string",
            "defaultValue": "westeurope",
            "metadata": {
                "description": "Region in which the resources should be deployed."
            }
        },
        "AddressSpace": {
            "type": "string",
            "defaultValue": "10.0.0.0/16",
            "metadata": {
                "description": "Total address space for this vnet."
            }
        },
        "SubnetAddressSpace": {
            "type": "string",
            "defaultValue": "10.0.0.0/24",
            "metadata": {
                "description": "First subnet."
            }
        }
    },
    "variables": {
        "gitBranch": "monitoring-hackathon",
        "urlBase": "[concat('https://raw.githubusercontent.com/peterschen/blog/', variables('gitBranch'))]",
        "urlTemplates": "[concat(variables('urlBase'), '/templates')]",
        "nameDeployment": "[deployment().name]",
        "nameDeploymentSubnet": "[concat(variables('nameDeployment'), '-Subnet')]",
        "nameVnet": "[parameters('Name')]",
        "nameNsg": "[concat(parameters('Name'), '-nsg')]",
        "regionVnet": "[parameters('Region')]",
        "regionNsg": "[parameters('Region')]",
        "idNsg": "[concat(resourceGroup().id, '/providers/Microsoft.Network/networkSecurityGroups/', variables('nameNsg'))]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('nameVnet')]",
            "apiVersion": "2018-08-01",
            "location": "[variables('regionVnet')]",
            "tags": {},
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('AddressSpace')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "subnet-0",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.1.0/24",
                            "networkSecurityGroup": {
                                "id": "[variables('idNsg')]"
                            }
                        }
                    },
                    {
                        "name": "AzureFirewallSubnet",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ]
            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('nameNsg'))]"
            ]
        },
        {
            "type": "Microsoft.Resources/deployments",
            "name": "[variables('nameDeploymentSubnet')]",
            "apiVersion": "2017-05-10",
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[concat(variables('urlTemplates'), '/network/subnet.json')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "Name": {
                        "value": "subnet-0"
                    },
                    "NameVnet": {
                        "value": "[variables('nameVnet')]"
                    },
                    "SubnetAddressSpace": {
                        "value": "[parameters('SubnetAddressSpace')]"
                    },
                    "IdNsg": {
                        "value": "[variables('idNsg')]"
                    }
                }
            },
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', variables('nameVnet'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('nameNsg')]",
            "apiVersion": "2015-06-15",
            "location": "[variables('regionNsg')]",
            "tags": {},
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-ssh-inbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-rdp-inbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        }
    ],
    "outputs": {
        "NameVnet": {
            "type": "string",
            "value": "[variables('nameVnet')]"
        },
        "NameNsg": {
            "type": "string",
            "value": "[variables('nameNsg')]"
        },
        "IdNsg": {
            "type": "string",
            "value": "[variables('idNsg')]"
        }
    }
}
